# doggy-gpt

./: Procfile  README.md  pyproject.toml  requirements.txt
chatgpt_backend/: main.py
chatgpt_backend/routes/: chat.py  user.py
chatgpt_backend/services/: chat_service.py  database.py  openai_service.py  user_service.py
chatgpt_backend/utils/: jwt_manager.py
tests/: chat_service.py  openai_service.py
